Fix unnecessary displaying of vertical scrollbar

--- a/src/.vuepress/styles/index.styl
+++ b/src/.vuepress/styles/index.styl
@@ -25,7 +25,6 @@ div[class*="language-"]
     margin-top 0
 
 html {
-  overflow-y: scroll;
   overflow-x: hidden;
   background-color: unset;
 }
